header top completato

--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header class="debug">
+        <header>
             <!-- inizio top header -->
-            <div class="top-container debug">
+            <div class="top-container">
 
-                <div class="header-top debug">
+                <div class="header-top">
 
-                    <div class="logo-container debug">
-                        Logo
+                    <div class="logo-container">
+                        <img src="img/logo.svg" alt="logo">
                     </div>
                         
-                    <nav class="menu debug">
+                    <nav class="menu">
                         <ul>
-                            <li>link</li>
-                            <li>link</li>
-                            <li>link</li>
-                            <li>link</li>
-                            <li>link</li>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perchè Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
                         </ul>
                     </nav>
 
-                    <div class="login-container debug">
-                        Login
+                    <div class="login-container">
+                        <button class="btn">Accedi</button>
                     </div>
 
                 </div>
