--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Discord</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -38,10 +39,13 @@
             <!-- fine top header -->
 
             <!-- inizio hero section -->
-            <div class="hero-container debug">
+            <div class="hero-container">
                 
-                <div class="hero debug">
-                    
+                <div class="hero">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis minus maxime laudantium aperiam eveniet dolor blanditiis asperiores, maiores soluta officiis earum debitis dolorum distinctio vitae quae, molestias eos? Unde, commodi?</p>
+                    <button class="btn"><i class="fa-solid fa-down-long"></i> Scarica per Mac</button>
+                    <button class="btn black">Apri Discord nel tuo browser</button>
                 </div>
 
             </div>
