--- a/index.html
+++ b/index.html
@@ -55,10 +55,15 @@
 
         <main>
             <!-- start regular sections -->
-            <section class="main-section debug">
-                <div class="section-container debug">
-                    <div class="img-section debug"></div>
-                    <div class="text-section debug"></div>
+            <section class="main-section">
+                <div class="section-container">
+                    <div class="img-section">
+                        <img src="img/item1.svg" alt="item 1">
+                    </div>
+                    <div class="text-section">
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, non</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde accusantium voluptatum, minus sint, ex nam sit laboriosam repudiandae omnis, laudantium amet praesentium inventore debitis reprehenderit labore repellat dolorum? Ea, a?</p>
+                    </div>
                 </div>
                 <div class="wave1">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -67,10 +72,15 @@
                 </div>
             </section>
 
-            <section class="main-section debug">
-                <div class="section-container reverse debug">
-                    <div class="img-section debug"></div>
-                    <div class="text-section debug"></div>
+            <section class="main-section">
+                <div class="section-container reverse">
+                    <div class="img-section">
+                        <img src="img/item2.svg" alt="item 2">
+                    </div>
+                    <div class="text-section">
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, non.</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde accusantium voluptatum, minus sint, ex nam sit laboriosam repudiandae omnis, laudantium amet praesentium inventore debitis reprehenderit labore repellat dolorum? Ea, a?</p>
+                    </div>
                 </div>
                 <div class="wave2">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -79,10 +89,15 @@
                 </div>
             </section>
 
-            <section class="main-section debug">
-                <div class="section-container debug">
-                    <div class="img-section debug"></div>
-                    <div class="text-section debug"></div>
+            <section class="main-section">
+                <div class="section-container">
+                    <div class="img-section">
+                        <img src="img/item3.svg" alt="item 3">
+                    </div>
+                    <div class="text-section">
+                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, non.</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde accusantium voluptatum, minus sint, ex nam sit laboriosam repudiandae omnis, laudantium amet praesentium inventore debitis reprehenderit labore repellat dolorum? Ea, a?</p>
+                    </div>
                 </div>
                 <div class="wave1">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -92,9 +107,19 @@
             </section>
             <!-- end regular sections -->
             <!-- start special section -->
-            <section class="main-section debug">
-                <div class="section-container debug">
-                    
+            <section class="main-section">
+                <div class="section-container special">
+                    <div class="text-section special">
+                        <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias sunt culpa illo possimus iusto excepturi ea dignissimos in repellendus architecto nobis magnam odio id iure, obcaecati tempore illum minus itaque.</p>
+                    </div>
+                    <div class="img-section special">
+                        <img src="img/item4-big.svg" alt="item 4">
+                    </div>
+                    <div class="bottom-special">
+                        <h4>Pronto ad iniziare la tua avventura?</h4>
+                        <button class="btn violet"><i class="fa-solid fa-down-long"></i> Scarica per Mac</button>
+                    </div>
                 </div>
             </section>
             <!-- end special section -->
