fine top footer

--- a/index.html
+++ b/index.html
@@ -127,13 +127,65 @@
 
         <footer>
             <!-- start top footer -->
-            <section class="top-footer debug">
-                <div class="contacts debug">
-                    <div class="column social debug"></div>
-                    <div class="column debug"></div>
-                    <div class="column debug"></div>
-                    <div class="column debug"></div>
-                    <div class="column debug"></div>
+            <section class="top-footer">
+                <div class="contacts">
+                    <div class="column social">
+                        <h3>Il tuo posto per parlare</h3>
+                        <div>
+                            <img src="img/ita.png" alt="bandiera italia"> Italiano <i class="fa-solid fa-angle-down"></i>
+                        </div>
+                        <div>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-facebook-square"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h4>lorem</h4>
+                        <ul>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h4>lorem</h4>
+                        <ul>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h4>lorem</h4>
+                        <ul>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h4>lorem</h4>
+                        <ul>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                            <li>lorem</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <!-- end top footer -->
