--- a/index.html
+++ b/index.html
@@ -189,12 +189,18 @@
                 </div>
             </section>
             <!-- end top footer -->
-            
+            <hr>
             <!-- start bottom footer -->
-            <section class="bottom-footer debug">
+            <section class="bottom-footer">
                 <div class="btm-footer-container debug">
-                    <div class="logo debug">logo</div>
-                    <div class="footer-button debug">bottone</div>
+                    <div class="logo">
+                        <img src="img/logo.svg" alt="logo">
+                    </div>
+                    <div class="footer-button debug">
+                        <button class="btn violet">
+                            Registrati
+                        </button>
+                    </div>
                 </div>
             </section>
             <!-- end bottom footer -->
