--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
             <hr>
             <!-- start bottom footer -->
             <section class="bottom-footer">
-                <div class="btm-footer-container debug">
+                <div class="btm-footer-container">
                     <div class="logo">
                         <img src="img/logo.svg" alt="logo">
                     </div>
-                    <div class="footer-button debug">
+                    <div class="footer-button">
                         <button class="btn violet">
                             Registrati
                         </button>
