--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="contacts">
                     <div class="column social">
                         <h3>Il tuo posto per parlare</h3>
-                        <div>
+                        <div class="languages">
                             <img src="img/ita.png" alt="bandiera italia"> Italiano <i class="fa-solid fa-angle-down"></i>
                         </div>
                         <div>
@@ -144,46 +144,46 @@
                     <div class="column">
                         <h4>lorem</h4>
                         <ul>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
                         </ul>
                     </div>
                     <div class="column">
                         <h4>lorem</h4>
                         <ul>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
                         </ul>
                     </div>
                     <div class="column">
                         <h4>lorem</h4>
                         <ul>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
                         </ul>
                     </div>
                     <div class="column">
                         <h4>lorem</h4>
                         <ul>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
-                            <li>lorem</li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">lorem</a></li>
                         </ul>
                     </div>
                 </div>
