--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
                 <div class="header-top">
 
-                    <div class="logo-container">
+                    <a href="#" class="logo-container">
                         <img src="img/logo.svg" alt="logo">
-                    </div>
+                    </a>
                         
                     <nav class="menu">
                         <ul>
                             <li><a href="#">Scarica</a></li>
-                            <li><a href="#">Perchè Discord</a></li>
+                            <li><a href="#">Perché Discord</a></li>
                             <li><a href="#">Nitro</a></li>
                             <li><a href="#">Sicurezza</a></li>
                             <li><a href="#">Assistenza</a></li>
@@ -30,7 +30,7 @@
                     </nav>
 
                     <div class="login-container">
-                        <button class="btn">Accedi</button>
+                        <a href="#" class="btn">Accedi</a>
                     </div>
 
                 </div>
@@ -43,9 +43,15 @@
                 
                 <div class="hero">
                     <h1>Il tuo posto per parlare</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis minus maxime laudantium aperiam eveniet dolor blanditiis asperiores, maiores soluta officiis earum debitis dolorum distinctio vitae quae, molestias eos? Unde, commodi?</p>
-                    <button class="btn"><i class="fa-solid fa-down-long"></i> Scarica per Mac</button>
-                    <button class="btn black">Apri Discord nel tuo browser</button>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis minus maxime laudantium aperiam eveniet dolor blanditiis asperiores, maiores soluta officiis earum debitis dolorum distinctio vitae quae, molestias eos? Unde, commodi?
+                    </p>
+                    <a href="#" class="btn big">
+                        <i class="fa-solid fa-down-long"></i> Scarica per Mac
+                    </a>
+                    <a href="#" class="btn big black">
+                        Apri Discord nel tuo browser
+                    </a>
                 </div>
 
             </div>
@@ -65,7 +71,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde accusantium voluptatum, minus sint, ex nam sit laboriosam repudiandae omnis, laudantium amet praesentium inventore debitis reprehenderit labore repellat dolorum? Ea, a?</p>
                     </div>
                 </div>
-                <div class="wave1">
+                <div class="wave one">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                         <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
                     </svg>
@@ -82,7 +88,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde accusantium voluptatum, minus sint, ex nam sit laboriosam repudiandae omnis, laudantium amet praesentium inventore debitis reprehenderit labore repellat dolorum? Ea, a?</p>
                     </div>
                 </div>
-                <div class="wave2">
+                <div class="wave two">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                         <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
                     </svg>
@@ -99,7 +105,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde accusantium voluptatum, minus sint, ex nam sit laboriosam repudiandae omnis, laudantium amet praesentium inventore debitis reprehenderit labore repellat dolorum? Ea, a?</p>
                     </div>
                 </div>
-                <div class="wave1">
+                <div class="wave one">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                         <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
                     </svg>
@@ -118,7 +124,7 @@
                     </div>
                     <div class="bottom-special">
                         <h4>Pronto ad iniziare la tua avventura?</h4>
-                        <button class="btn violet"><i class="fa-solid fa-down-long"></i> Scarica per Mac</button>
+                        <a href="#" class="btn big violet"><i class="fa-solid fa-down-long"></i> Scarica per Mac</a>
                     </div>
                 </div>
             </section>
@@ -135,10 +141,18 @@
                             <img src="img/ita.png" alt="bandiera italia"> Italiano <i class="fa-solid fa-angle-down"></i>
                         </div>
                         <div>
-                            <i class="fa-brands fa-twitter"></i>
-                            <i class="fa-brands fa-instagram"></i>
-                            <i class="fa-brands fa-facebook-square"></i>
-                            <i class="fa-brands fa-youtube"></i>
+                            <a href="#">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa-brands fa-facebook-square"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>    
                         </div>
                     </div>
                     <div class="column">
@@ -193,13 +207,13 @@
             <!-- start bottom footer -->
             <section class="bottom-footer">
                 <div class="btm-footer-container">
-                    <div class="logo">
+                    <a href="#" class="logo">
                         <img src="img/logo.svg" alt="logo">
-                    </div>
+                    </a>
                     <div class="footer-button">
-                        <button class="btn violet">
+                        <a href="#" class="btn violet">
                             Registrati
-                        </button>
+                        </a>
                     </div>
                 </div>
             </section>
